--- a/index.html
+++ b/index.html
@@ -245,4 +245,18 @@
     </script>
 </body>
 
-</html>
+</html><!-- Default Statcounter code for mining
+https://akant4amir-blip.github.io/eyvazi-miner/ -->
+<script type="text/javascript">
+var sc_project=13186022; 
+var sc_invisible=1; 
+var sc_security="80fdf2f9"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="hit counter"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13186022/0/80fdf2f9/1/" alt="hit counter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+
